CUDA compatibility and new mesresults

--- a/03c03 Smoothness.ipynb
+++ b/03c03 Smoothness.ipynb
@@ -39,8 +39,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
+    "def anisotropic_kernel(D, sigma=0.7, alpha = 1):\n",
+    "  \"\"\"Computes anisotropic kernel of given distances matrix.\n",
+    "\n",
+    "  Parameters\n",
+    "  ----------\n",
+    "  D : ndarray or sparse\n",
+    "  sigma : float, optional\n",
+    "      Kernel bandwidth, by default 0.7\n",
+    "  alpha : int, optional\n",
+    "      Degree of density normalization, from 0 to 1; by default 1\n",
+    "  This is a good function.\n",
+    "  \"\"\"\n",
+    "  W = torch.exp(-D**2/(2*sigma**2))\n",
+    "  # Additional normalization step for density\n",
+    "  D = torch.diag(1/(torch.sum(W,axis=1)**alpha)) \n",
+    "  W = D @ W @ D\n",
+    "  return W"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# export\n",
-    "from FRED.data_processing import anisotropic_kernel\n",
     "def smoothness_of_vector_field(embedded_points, vector_field_function, device, use_grid = True, grid_width = 20):\n",
     "    if use_grid:\n",
     "        # find support of points\n",
@@ -76,7 +101,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.6 64-bit (system)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
