--- a/04 Trainer.ipynb
+++ b/04 Trainer.ipynb
@@ -106,7 +106,7 @@
     "        self.FE = FE.to(device)\n",
     "        self.losses = None\n",
     "        self.title = title\n",
-    "        self.epochs_between_visualization = 10\n",
+    "        self.epochs_between_visualization = 1\n",
     "        self.timestamp = datetime.datetime.now().isoformat()\n",
     "        os.mkdir(f\"visualizations/{self.timestamp}\")\n",
     "        self.optim = torch.optim.Adam(self.FE.parameters())\n",
@@ -140,11 +140,11 @@
     "            # run visualizations, if needed\n",
     "            if epoch_num % self.epochs_between_visualization == 0:\n",
     "                title = f\"{self.timestamp}/{self.title} Epoch {epoch_num:03d}\"\n",
-    "                emb_X = self.FE.embedder(self.X.to(device))\n",
+    "                emb_X = self.FE.embedder(self.X.to(self.device))\n",
     "                flowArtist = self.FE.flowArtist\n",
     "                self.visualize(emb_X, flowArtist, self.losses, title)\n",
     "        # Save most recent embedded points and flow artist for running visualizations\n",
-    "        self.embedded_points = self.FE.embedder(self.dataloader.dataset.X)\n",
+    "        self.embedded_points = self.FE.embedder(self.dataloader.dataset.X.to(self.device))\n",
     "        self.flow_artist = flowArtist\n",
     "        self.labels = self.dataloader.dataset.labels\n",
     "\n",
