updated dataset behavior

--- a/02a Flashlight Kernel.ipynb
+++ b/02a Flashlight Kernel.ipynb
@@ -417,7 +417,7 @@
     "# export\n",
     "import torch\n",
     "import numpy as np\n",
-    "def flashlight_affinity_matrix(X, flow, k=10, sigma=\"automatic\", flow_strength= 1):\n",
+    "def flashlight_affinity_matrix(X, flow, k=10, sigma=\"automatic\",flow_strength= 1):\n",
     "    if type(X) == torch.Tensor:\n",
     "        X = X.numpy()\n",
     "    Dists = distance_matrix(X)\n",
@@ -525,7 +525,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('pyg_from_source')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
