--- a/04 Trainer.ipynb
+++ b/04 Trainer.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device mps\n"
+      "Using device cuda\n"
      ]
     }
    ],
@@ -53,25 +53,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[autoreload of FRED.trainers failed: Traceback (most recent call last):\n",
-      "  File \"/Users/adjourner/miniforge3/envs/pyg_from_source/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/Users/adjourner/miniforge3/envs/pyg_from_source/lib/python3.9/site-packages/IPython/extensions/autoreload.py\", line 455, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"/Users/adjourner/miniforge3/envs/pyg_from_source/lib/python3.9/importlib/__init__.py\", line 169, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 613, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 850, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 228, in _call_with_frames_removed\n",
-      "  File \"/Users/adjourner/Projects/FRED/FRED/trainers.py\", line 22, in <module>\n",
-      "    class Trainer(object):\n",
-      "  File \"/Users/adjourner/Projects/FRED/FRED/trainers.py\", line 30, in Trainer\n",
-      "    visualization_functions=[save_embedding_visualization, visualize_points],\n",
-      "NameError: name 'save_embedding_visualization' is not defined\n",
-      "]\n"
+     "ename": "NameError",
+     "evalue": "name 'scheduler' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 17>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m     15\u001b[0m device \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mdevice(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcuda\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mis_available() \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 17\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mTrainer\u001b[39;00m(\u001b[38;5;28mobject\u001b[39m):\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\n\u001b[1;32m     19\u001b[0m         \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m     20\u001b[0m         FE,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     26\u001b[0m         learning_rate \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1e-3\u001b[39m,\n\u001b[1;32m     27\u001b[0m     ):\n\u001b[1;32m     28\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvizfiz \u001b[38;5;241m=\u001b[39m visualization_functions\n",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36mTrainer\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mTrainer\u001b[39;00m(\u001b[38;5;28mobject\u001b[39m):\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\n\u001b[1;32m     19\u001b[0m         \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m     20\u001b[0m         FE,\n\u001b[1;32m     21\u001b[0m         loss_weights,\n\u001b[1;32m     22\u001b[0m         title,\n\u001b[1;32m     23\u001b[0m         visualization_functions,\n\u001b[1;32m     24\u001b[0m         device\u001b[38;5;241m=\u001b[39mdevice,\n\u001b[0;32m---> 25\u001b[0m         scheduler \u001b[38;5;241m=\u001b[39m \u001b[43mscheduler\u001b[49m,\n\u001b[1;32m     26\u001b[0m         learning_rate \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1e-3\u001b[39m,\n\u001b[1;32m     27\u001b[0m     ):\n\u001b[1;32m     28\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvizfiz \u001b[38;5;241m=\u001b[39m visualization_functions\n\u001b[1;32m     29\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mloss_weights \u001b[38;5;241m=\u001b[39m loss_weights\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'scheduler' is not defined"
      ]
     }
    ],
@@ -100,6 +90,8 @@
     "        title,\n",
     "        visualization_functions,\n",
     "        device=device,\n",
+    "        scheduler = scheduler,\n",
+    "        learning_rate = 1e-3,\n",
     "    ):\n",
     "        self.vizfiz = visualization_functions\n",
     "        self.loss_weights = loss_weights\n",
@@ -109,8 +101,8 @@
     "        self.epochs_between_visualization = 1\n",
     "        self.timestamp = datetime.datetime.now().isoformat()\n",
     "        os.mkdir(f\"visualizations/{self.timestamp}\")\n",
-    "        self.optim = torch.optim.Adam(self.FE.parameters())\n",
-    "        self.scheduler = None\n",
+    "        self.optim = torch.optim.Adam(self.FE.parameters(), lr = learning_rate)\n",
+    "        self.scheduler = scheduler\n",
     "        self.device = device\n",
     "\n",
     "    def fit(self, dataloader, n_epochs=100):\n",
