--- a/04a Scheduling.ipynb
+++ b/04a Scheduling.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device mps\n"
+      "Using device cuda\n"
      ]
     }
    ],
@@ -40,17 +40,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "s"
+    "# Sigmoid Scheduler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid_scheduler(Dictionary loss_weights, char loss_name, int epoch, int total_epochs, char function_type):\n",
+    "    '''\n",
+    "    Inputs\n",
+    "    loss_weights: Dictionary of loss names and their weights\n",
+    "    loss_name: the loss in the loss_weights to be scheduled\n",
+    "    epoch: current epoch\n",
+    "    total_epochs: total number of epochs that will be run\n",
+    "    function_type: type of function for the scheduler, can be \"sigmoid\", \n",
+    "    \n",
+    "    Return\n",
+    "    loss_weights dictionary with updated weight for the specified loss function at the current epoch\n",
+    "    '''\n",
+    "    if function_type == \"sigmoid\":\n",
+    "        new_weight = 1 / (1 + np.exp(-epoch+np.floor(total_epochs/2)))\n",
+    "        loss_weights[loss_name] = new_weight\n",
+    "    return loss_weights\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('pyg_from_source')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
