--- a/04a Scheduling.ipynb
+++ b/04a Scheduling.ipynb
@@ -49,26 +49,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sigmoid_scheduler(Dictionary loss_weights, char loss_name, int epoch, int total_epochs, char function_type):\n",
+    "def sigmoid_scheduler(Dictionary loss_weights, char loss_name, int epoch, int total_epochs, int c, char function_type):\n",
     "    '''\n",
     "    Inputs\n",
     "    loss_weights: Dictionary of loss names and their weights\n",
     "    loss_name: the loss in the loss_weights to be scheduled\n",
     "    epoch: current epoch\n",
     "    total_epochs: total number of epochs that will be run\n",
-    "    function_type: type of function for the scheduler, can be \"sigmoid\", \n",
+    "    c: scaler multiple for sigmoid\n",
+    "    function_type: type of function for the scheduler, can be \n",
+    "        \"sigmoid\": sigmoid 1 / (1 + np.exp(c(-epoch+np.floor(total_epochs/2))))\n",
+    "        \"off\" 1 - \"sigmoid\"\n",
     "    \n",
     "    Return\n",
     "    loss_weights dictionary with updated weight for the specified loss function at the current epoch\n",
     "    '''\n",
     "    if function_type == \"sigmoid\":\n",
     "        new_weight = 1 / (1 + np.exp(-epoch+np.floor(total_epochs/2)))\n",
-    "        loss_weights[loss_name] = new_weight\n",
-    "    return loss_weights\n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "    elif function_type == \"off\"\n",
+    "        new_weight = 1 - (1 / (1 + np.exp(-epoch+np.floor(total_epochs/2))))\n",
+    "    loss_weights[loss_name] = new_weight\n",
+    "    return loss_weights  \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def smooth_scheduler(Dictionary loss_weights, int epoch):\n",
+    "    loss_weights = sigmoid_scheduler(loss_weights, loss_name=\"smoothness\", epoch, total_epochs=10, c=1, function_type=\"sigmoid\")\n",
+    "    # change parameters manually, however you'd like:\n",
+    "    # loss_weights = sigmoid_scheduler(loss_weights, loss_name=\"neighbor loss\", epoch, total_epochs=20, c=5, function_type=\"off\")\n",
+    "    return loss_weights"
    ]
   }
  ],
