--- a/04 Trainer.ipynb
+++ b/04 Trainer.ipynb
@@ -107,7 +107,9 @@
     "        self.losses = None\n",
     "        self.title = title\n",
     "        self.epochs_between_visualization = 1\n",
-    "        self.timestamp = datetime.datetime.now().isoformat()\n",
+    "        self.timestamp = datetime.datetime.now().isoformat().replace(\":\",\".\")\n",
+    "        if not os.path.exists(\"visualizations\"):\n",
+    "            os.mkdir(\"visualizations\")\n",
     "        os.mkdir(f\"visualizations/{self.timestamp}\")\n",
     "        self.optim = torch.optim.Adam(self.FE.parameters())\n",
     "        self.scheduler = None\n",
@@ -476,7 +478,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.6.6 64-bit (system)",
    "language": "python",
    "name": "python3"
   }
