--- a/04b Visualizations for Training.ipynb
+++ b/04b Visualizations for Training.ipynb
@@ -50,7 +50,7 @@
     "import torch\n",
     "from FRED.embed import compute_grid\n",
     "\n",
-    "device = torch.device(\"cuda\" if torch.has_cuda else \"cpu\")\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "\n",
     "def visualize_points(\n",
@@ -161,7 +161,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('pyg_from_source')",
+   "display_name": "Python 3.10.4 ('sumry-directed-graphs')",
    "language": "python",
    "name": "python3"
   }
