add function types for scheduler

--- a/04a Scheduling.ipynb
+++ b/04a Scheduling.ipynb
@@ -48,10 +48,12 @@
     "    loss_name: the loss in the loss_weights to be scheduled\n",
     "    epoch: current epoch\n",
     "    total_epochs: total number of epochs that will be run\n",
-    "    c: scaler multiple for sigmoid\n",
+    "    c: scaler multiple for sigmoid, or slope for linear\n",
     "    function_type: type of function for the scheduler, can be \n",
     "        \"sigmoid\": sigmoid 1 / (1 + np.exp(c(-epoch+np.floor(total_epochs/2))))\n",
-    "        \"off\" 1 - \"sigmoid\"\n",
+    "        \"off\": 1 - \"sigmoid\"\n",
+    "        \"linear\": linear with slope c\n",
+    "        \"loglinear\": log linear with weight c\n",
     "    \n",
     "    Return\n",
     "    loss_weights dictionary with updated weight for the specified loss function at the current epoch\n",
@@ -61,6 +63,10 @@
     "    elif function_type == \"off\"\n",
     "        new_weight = 1 - (1 / (1 + np.exp(-epoch+np.floor(total_epochs/2))))\n",
     "    loss_weights[loss_name] = new_weight\n",
+    "    elif function_type == \"linear\"\n",
+    "        new_weight = c*epoch\n",
+    "    elif function_type == \"loglinear\"\n",
+    "        new_weight = np.exp(c*epoch)\n",
     "    return loss_weights  \n",
     "    "
    ]
