edit naming and default parameter values

--- a/04a Scheduling.ipynb
+++ b/04a Scheduling.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sigmoid_scheduler(Dictionary loss_weights, char loss_name, int epoch, int total_epochs, int c, char function_type):\n",
+    "def general_scheduler(Dictionary loss_weights, char loss_name, int epoch, int total_epochs, int c=1, char function_type=\"sigmoid\"):\n",
     "    '''\n",
     "    Inputs\n",
     "    loss_weights: Dictionary of loss names and their weights\n",
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def smooth_scheduler(Dictionary loss_weights, int epoch):\n",
+    "def specific_scheduler(Dictionary loss_weights, int epoch):\n",
     "    loss_weights = sigmoid_scheduler(loss_weights, loss_name=\"smoothness\", epoch, total_epochs=10, c=1, function_type=\"sigmoid\")\n",
     "    # change parameters manually, however you'd like:\n",
     "    # loss_weights = sigmoid_scheduler(loss_weights, loss_name=\"flow neighbor loss\", epoch, total_epochs=20, c=5, function_type=\"off\")\n",
