Experiments with evolving flow over time
Added 03e: creates gifs of diffusion probabilities at various time steps as t increases continuously. They’re quite fun to look at, and reveal some interesting behavior. As suspected, the diffusion probability moves quite uniformly, “like a blob” traveling across the manifold.

To make these visualizations more easily, I added some new features to our plot directed functions:
1. They can now save the graph, instead of displaying it, if “save = True” is passed.
2. plot_directed_3d sets the axes limits more intelligently.

Signed-off-by: Professor Wug <dev@riddle.press>

--- a/03d Flow Prediction Embedder.ipynb
+++ b/03d Flow Prediction Embedder.ipynb
@@ -14,7 +14,7 @@
     }
    ],
    "source": [
-    "# default_exp \n",
+    "# default_exp embed\n",
     "from nbdev.showdoc import *\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -153,6 +153,7 @@
     "        # print(\"got points just fine\")\n",
     "        # Embed these into a dictionary for easy cross reference\n",
     "        return_dict = {\n",
+    "            \"idxs\":happy_couple,\n",
     "            \"probs\":probs,\n",
     "            \"distance\":self.precomputed_distances[happy_couple[0]][happy_couple[1]],\n",
     "            \"points\":points,\n",
@@ -286,13 +287,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -337,9 +331,12 @@
     "        self.MSE = nn.MSELoss()\n",
     "        # self.KLD = homemade_KLD # when running on mac\n",
     "        self.epsilon = 1e-6  # set zeros to eps\n",
+    "        self.log_softmax = nn.LogSoftmax()\n",
+    "        self.loss = nn.CrossEntropyLoss()\n",
     "\n",
-    "    def diffusion_flow_loss(self):\n",
+    "    def diffusion_flow_probs(self):\n",
     "        # Predict flow probabilities to points based on a local diffusion matrix, constructed out of the batch\n",
+    "        # Penalize by cross entropy against expected probabilities\n",
     "        # We use the embedded points and our FlowArtist to predict diffusion probabilities\n",
     "        # Steps:\n",
     "        # 1. Build diffusion matrix (using automatic kernel selection with flashlight kernel)\n",
@@ -347,10 +344,14 @@
     "        P = F.normalize(A, p=1, dim=1)\n",
     "        # 2. Power diffusion matrix\n",
     "        self.Pts = [torch.linalg.matrix_power(P,t) for t in self.ts]\n",
-    "        # 3. Take \n",
-    "\n",
-    "        return loss\n",
-    "\n",
+    "        # 3. Convert from powered pointwise probs to the probs between pairs of points, in the format originally given.\n",
+    "        diffusion_probs = []\n",
+    "        for Pt in self.Pts:\n",
+    "            diffusion_probs.append(\n",
+    "                Pt.diagonal(offset = 1)\n",
+    "            )\n",
+    "        return diffusion_probs\n",
+    "        \n",
     "    def forward(self, data, loss_weights):\n",
     "        # Extract data from batch\n",
     "        # By default, point positions are batched two at a time. \n",
@@ -358,6 +359,15 @@
     "        X = data[\"points\"].flatten(start_dim=1, end_dim=1)\n",
     "        self.embedded_points = self.embedder(X)\n",
     "        self.embedded_flows = self.flowArtist(self.embedded_points)\n",
+    "        # Compute predicted diffusion flow probabilities\n",
+    "        diffusion_probs = self.diffusion_flow_probs()\n",
+    "        y = data[\"probs\"]\n",
+    "        # Row normalize these probabilities by indx (construct)\n",
+    "        \n",
+    "        # Loop through each t and compute a weighted multiscale loss\n",
+    "        for i, t in enumerate(self.ts):\n",
+    "\n",
+    "\n",
     "        \n",
     "        self.embedded_flows = self.flowArtist(self.embedded_points)\n",
     "        losses = self.loss(data, loss_weights)\n",
