--- a/01c Plotting Utils.ipynb
+++ b/01c Plotting Utils.ipynb
@@ -55,8 +55,7 @@
     "# export\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "\n",
-    "def plot_directed_2d(X, flows, labels=None, mask_prob=0.5, cmap=\"viridis\", ax=None):\n",
+    "def plot_directed_2d(X, flows, labels=None, mask_prob=0.5, cmap=\"viridis\", ax=None, save = False, title = \"\", filename = \"\"):\n",
     "    num_nodes = X.shape[0]\n",
     "    alpha_points, alpha_arrows = (0.1, 1) if labels is None else (1, 0.1)\n",
     "    if ax is None:\n",
@@ -66,8 +65,12 @@
     "    mask = np.random.rand(num_nodes) > mask_prob\n",
     "    ax.quiver(X[mask, 0], X[mask, 1], flows[mask, 0], flows[mask, 1], alpha=alpha_arrows)\n",
     "    ax.set_aspect(\"equal\")\n",
+    "    ax.set_title(title)\n",
     "    if ax is None:\n",
-    "        plt.show()\n"
+    "        plt.show()\n",
+    "    if save:\n",
+    "        plt.savefig(filename)\n",
+    "        plt.close()"
    ]
   },
   {
@@ -83,7 +86,7 @@
     "    ax.plot([0, 0], [0, 0], zlim, color=\"k\", alpha=0.5)\n",
     "\n",
     "\n",
-    "def plot_directed_3d(X, flow, labels=None, mask_prob=0.5, cmap=\"viridis\", origin=False, ax=None):\n",
+    "def plot_directed_3d(X, flow, labels=None, mask_prob=0.5, cmap=\"viridis\", origin=False, ax=None, save = False, filename = \"\"):\n",
     "    num_nodes = X.shape[0]\n",
     "    alpha_points, alpha_arrows = (0.1, 1) if labels is None else (1, 0.1)\n",
     "    mask = np.random.rand(num_nodes) > mask_prob\n",
@@ -108,8 +111,15 @@
     "        alpha=alpha_arrows,\n",
     "        length=0.5,\n",
     "    )\n",
+    "    lim = np.max(np.linalg.norm(X, axis=1))\n",
+    "    ax.axes.set_xlim3d(left=-lim, right=lim)\n",
+    "    ax.axes.set_ylim3d(bottom=-lim, top=lim)\n",
+    "    ax.axes.set_zlim3d(bottom=-lim, top=lim)\n",
     "    if ax is None:\n",
-    "        plt.show()\n"
+    "        plt.show()\n",
+    "    if save:\n",
+    "        plt.savefig(filename)\n",
+    "        plt.close()\n"
    ]
   },
   {
@@ -343,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('sumry-directed-graphs')",
+   "display_name": "Python 3.9.13 ('pyg_from_source')",
    "language": "python",
    "name": "python3"
   }
