Added tests on double helix
Signed-off-by: Professor Wug <dev@riddle.press>

--- a/01c Plotting Utils.ipynb
+++ b/01c Plotting Utils.ipynb
@@ -111,10 +111,11 @@
     "        alpha=alpha_arrows,\n",
     "        length=0.5,\n",
     "    )\n",
-    "    lim = np.max(np.linalg.norm(X, axis=1))\n",
-    "    ax.axes.set_xlim3d(left=-lim, right=lim)\n",
-    "    ax.axes.set_ylim3d(bottom=-lim, top=lim)\n",
-    "    ax.axes.set_zlim3d(bottom=-lim, top=lim)\n",
+    "    # lim = np.max(np.linalg.norm(X, axis=1))\n",
+    "    # print(\"lim is\",lim)\n",
+    "    # ax.axes.set_xlim3d(left=-lim, right=lim)\n",
+    "    # ax.axes.set_ylim3d(bottom=-lim, top=lim)\n",
+    "    # ax.axes.set_zlim3d(bottom=-lim, top=lim)\n",
     "    if ax is None:\n",
     "        plt.show()\n",
     "    if save:\n",
