--- a/03c04 KL Divergence.ipynb
+++ b/03c04 KL Divergence.ipynb
@@ -37,14 +37,13 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "def kl_divergence_loss(KLD, P_graph, P_embedding):\n",
+    "def kl_divergence_loss(P_embedding, P_graph):\n",
     "    P_embedding = torch.log(P_embedding)\n",
-    "    if KLD.log_target:\n",
-    "        P_graph = torch.log(P_graph)\n",
     "    if P_embedding.is_sparse:\n",
     "        P_embedding = P_embedding.to_dense()\n",
     "        P_graph = P_graph.to_dense()\n",
-    "    loss = KLD(P_embedding, P_graph)\n",
+    "    loss = torch.nn.functional.kl_div(P_embedding, P_graph, reduction='batchmean')\n",
+    "    # print(\"kld loss\",loss)\n",
     "    return loss"
    ]
   }
