--- a/04b Visualizations for Training.ipynb
+++ b/04b Visualizations for Training.ipynb
@@ -131,6 +131,7 @@
     "# export\n",
     "def collate_loss(\n",
     "    provided_losses,\n",
+    "    weights,\n",
     "    prior_losses=None,\n",
     "    loss_type=\"total\",\n",
     "):\n",
@@ -145,7 +146,7 @@
     "        prior_losses[\"total\"] = []\n",
     "    for key in provided_losses.keys():\n",
     "        try:\n",
-    "            prior_losses[key].append(provided_losses[key].detach().cpu().numpy())\n",
+    "            prior_losses[key].append(provided_losses[key].detach().cpu().numpy() * weights[key])\n",
     "        except:\n",
     "            prior_losses[key].append(0)\n",
     "    return prior_losses\n"
@@ -161,7 +162,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('sumry-directed-graphs')",
+   "display_name": "Python 3.9.13 ('pyg_from_source')",
    "language": "python",
    "name": "python3"
   }
