--- a/03 Embedder.ipynb
+++ b/03 Embedder.ipynb
@@ -9,9 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device mps\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Using device cpu\n"
      ]
     }
    ],
@@ -65,6 +63,7 @@
     "# export\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "from FRED.data_processing import affinity_matrix_from_pointset_to_pointset\n",
     "\n",
     "\n",
     "class ManifoldFlowEmbedder(torch.nn.Module):\n",
@@ -126,6 +125,11 @@
     "                use_grid=self.smoothness_grid,\n",
     "            )\n",
     "            losses[\"smoothness\"] = smoothness_loss\n",
+    "\n",
+    "        if loss_weights[\"kld\"] != 0:\n",
+    "            A = affinity_matrix_from_pointset_to_pointset(self.embedded_points, self.embedded_points, self.embedded_flows, sigma=0.5, flow_strength=1)\n",
+    "            P = torch.nn.functional.normalize(A, p=1, dim=1)\n",
+    "            losses['kld'] = kl_divergence_loss(P, data[\"P\"])\n",
     "        return losses\n",
     "\n",
     "    def forward(self, data, loss_weights):\n",
