--- a/03c02 Flow Neighbor MSE.ipynb
+++ b/03c02 Flow Neighbor MSE.ipynb
@@ -11,7 +11,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# default_exp embed\n",
     "# hide\n",
@@ -20,7 +29,7 @@
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import FRED\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else 'mps' if torch.backends.mps.is_available() else \"cpu\")\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -39,8 +48,8 @@
     "# export\n",
     "def flow_neighbor_loss(neighbors, embedded_points, embedded_flows):\n",
     "  row, col = neighbors\n",
-    "  directions = embedded_points[col,:] - embedded_points[row,:]\n",
-    "  flows = embedded_flows[row,:]\n",
+    "  directions = (embedded_points[col] - embedded_points[row])\n",
+    "  flows = embedded_flows[row]\n",
     "  loss = torch.norm(directions - flows)**2\n",
     "  return loss"
    ]
@@ -48,7 +57,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('pyg_from_source')",
+   "display_name": "Python 3.9.13 ('FRED')",
    "language": "python",
    "name": "python3"
   }
