--- a/04 Trainer.ipynb
+++ b/04 Trainer.ipynb
@@ -99,12 +99,14 @@
     "        loss_weights,\n",
     "        title,\n",
     "        visualization_functions,\n",
+    "        data_type = \"Flow Neighbor\",\n",
     "        device=device,\n",
     "    ):\n",
     "        self.vizfiz = visualization_functions\n",
     "        self.loss_weights = loss_weights\n",
     "        self.FE = FE.to(device)\n",
     "        self.losses = None\n",
+    "        self.data_type = data_type\n",
     "        self.title = title\n",
     "        self.epochs_between_visualization = 1\n",
     "        self.timestamp = datetime.datetime.now().isoformat().replace(\":\",\".\")\n",
@@ -121,15 +123,20 @@
     "        self.labels = dataloader.dataset.labels\n",
     "        self.X = dataloader.dataset.X\n",
     "        for epoch_num in trange(n_epochs):\n",
-    "            for data in self.dataloader:\n",
+    "            for data in tqdm(self.dataloader):\n",
     "                self.optim.zero_grad()\n",
     "                # update loss weights according to scheduling\n",
     "                if self.scheduler is not None:\n",
     "                    self.loss_weights = self.scheduler(self.loss_weights)\n",
     "                # have model compute losses, compile them into cost using loss weights\n",
-    "                data['X'] = data['X'].to(self.device)\n",
-    "                data['P'] = data['P'].to(self.device)\n",
-    "                data['precomputed distances'] = data['precomputed distances'].to(self.device)\n",
+    "                if self.data_type == \"Flow Neighbor\":\n",
+    "                    data['X'] = data['X'].to(self.device)\n",
+    "                    data['P'] = data['P'].to(self.device)\n",
+    "                    data['precomputed distances'] = data['precomputed distances'].to(self.device)\n",
+    "                elif self.data_type == \"Flow Prediction\":\n",
+    "                    data['X'] = data['X'].to(self.device)\n",
+    "                    data['transition_to'] = data['transition_to'].to(self.device)\n",
+    "                    data['distance'] = data[\"distance\"].to(self.device)\n",
     "                losses = self.FE(data, self.loss_weights)\n",
     "                cost = self.weight_losses(losses)\n",
     "                # backpropogate and update model\n",
@@ -137,7 +144,7 @@
     "                self.optim.step()\n",
     "                # add losses to running loss history\n",
     "                self.losses = collate_loss(\n",
-    "                    provided_losses=losses, prior_losses=self.losses\n",
+    "                    provided_losses=losses, weights = self.loss_weights, prior_losses=self.losses, \n",
     "                )\n",
     "            # run visualizations, if needed\n",
     "            if epoch_num % self.epochs_between_visualization == 0:\n",
@@ -478,7 +485,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.6 64-bit (system)",
+   "display_name": "Python 3.9.13 ('pyg_from_source')",
    "language": "python",
    "name": "python3"
   }
