Batch testing scripts
Signed-off-by: Professor Wug <dev@riddle.press>

--- a/04 Trainer.ipynb
+++ b/04 Trainer.ipynb
@@ -123,7 +123,7 @@
     "        self.labels = dataloader.dataset.labels\n",
     "        self.X = dataloader.dataset.X\n",
     "        for epoch_num in trange(n_epochs):\n",
-    "            for data in tqdm(self.dataloader):\n",
+    "            for data in self.dataloader:\n",
     "                self.optim.zero_grad()\n",
     "                # update loss weights according to scheduling\n",
     "                if self.scheduler is not None:\n",
@@ -485,11 +485,11 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('pyg_from_source')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
