--- a/01c Plotting Utils.ipynb
+++ b/01c Plotting Utils.ipynb
@@ -55,12 +55,13 @@
     "# export\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def plot_directed_2d(X, flows, labels=None, mask_prob=0.5, cmap=\"viridis\", ax=None, save = False, title = \"\", filename = \"\"):\n",
+    "def plot_directed_2d(X, flows, labels=None, mask_prob=0.5, cmap=\"viridis\", ax=None, save = False, use_streamlines = True, title = \"\", filename = \"\"):\n",
     "    num_nodes = X.shape[0]\n",
     "    alpha_points, alpha_arrows = (0.1, 1) if labels is None else (1, 0.1)\n",
     "    if ax is None:\n",
     "        fig = plt.figure()\n",
     "        ax = fig.add_subplot()\n",
+    "    \n",
     "    ax.scatter(X[:, 0], X[:, 1], marker=\".\", c=labels, cmap=cmap, alpha=alpha_points)\n",
     "    mask = np.random.rand(num_nodes) > mask_prob\n",
     "    ax.quiver(X[mask, 0], X[mask, 1], flows[mask, 0], flows[mask, 1], alpha=alpha_arrows)\n",
@@ -354,11 +355,11 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('pyg_from_source')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
