Negative sampling loss; first batch of batch testing results
Signed-off-by: Professor Wug <dev@riddle.press>

--- a/03 Embedder.ipynb
+++ b/03 Embedder.ipynb
@@ -74,6 +74,7 @@
     "        device=torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\"),\n",
     "        sigma=0.5,\n",
     "        flow_strength=0.5,\n",
+    "        num_negative_samples = 20,\n",
     "        smoothness_grid=True,\n",
     "    ):\n",
     "        super().__init__()\n",
@@ -83,6 +84,7 @@
     "        self.sigma = sigma\n",
     "        self.flow_strength = flow_strength\n",
     "        self.smoothness_grid = smoothness_grid\n",
+    "        self.num_negative_samples = num_negative_samples\n",
     "        # Initialize autoencoder and flow artist\n",
     "        self.embedder, self.decoder = auto_encoder(embedder_shape, device=self.device)\n",
     "        self.flowArtist = flow_artist(dim=self.embedding_dimension, device=self.device)\n",
@@ -114,6 +116,20 @@
     "                self.embedded_flows,\n",
     "            )\n",
     "            losses[\"flow neighbor loss\"] = neighbor_loss\n",
+    "            \n",
+    "        # Computes negative sampling loss\n",
+    "        if loss_weights[\"contrastive flow loss\"] != 0:\n",
+    "            # sample random points from the realm outside of the flow neighbors\n",
+    "            row = torch.zeros(self.num_negative_samples).long()\n",
+    "            negative_sample_idxs = torch.randint(data[\"num flow neighbors\"],len(self.embedded_points),(1,self.num_negative_samples))[0]\n",
+    "            not_neighbors = torch.vstack([row, negative_sample_idxs])\n",
+    "            # pass these into the contrastive flow loss\n",
+    "            loss = contrastive_flow_loss(\n",
+    "                not_neighbors,\n",
+    "                self.embedded_points,\n",
+    "                self.embedded_flows\n",
+    "            )\n",
+    "            losses[\"contrastive flow loss\"] = loss\n",
     "\n",
     "        # Compute smoothness regularization\n",
     "        if loss_weights[\"smoothness\"] != 0:\n",
@@ -142,11 +158,11 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('pyg_from_source')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
