--- a/05b01 Double Helix Results.ipynb
+++ b/05b01 Double Helix Results.ipynb
@@ -23,7 +23,7 @@
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import FRED\n",
-    "if torch.__version__[:4] == '1.13': # If using pytorch with MPS, use Apple silicon GPU acceleration\n",
+    "if torch.__version__[:4] == '1.14': # If using pytorch with MPS, use Apple silicon GPU acceleration\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else 'mps' if torch.has_mps else \"cpu\")\n",
     "else:\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -100,7 +100,7 @@
     "import os\n",
     "\n",
     "counter = 0\n",
-    "def parameters_list_from_dict(parameters_dict, outfile, filetype = \"dsq\", kernel_name = 'directed_graphs', preamble = 'module load miniconda; conda activate directed_graphs;'):\n",
+    "def parameters_list_from_dict(parameters_dict, outfile, filetype = \"dsq\", kernel_name = 'FREDkernel_jupyter', preamble = 'module load miniconda; conda activate FREDkernel;'):\n",
     "    ''' Given a dictionary whose values are each a list of possible values, creates a json file with one dictionary for every possible combination of values. \n",
     "        If filetype is `dsq`, then makes a txt file with each line corresponding to a job, ending in `papermill ....`.\n",
     "    '''\n",
@@ -123,8 +123,11 @@
     "                    f.write(',')\n",
     "                elif filetype == \"dsq\":\n",
     "                    in_notebook = little_dict['notebook']\n",
-    "                    out_notebook = 'papermilled/'+in_notebook.replace('.ipynb','')+ \"/\" + descriptor + '.ipynb'\n",
-    "                    command = f\"{preamble} papermill '{in_notebook}' '{out_notebook}' -k {kernel_name} -y {little_dict.__str__()}\"\n",
+    "                    directory = 'papermilled/'+in_notebook.replace('.ipynb','')\n",
+    "                    if not os.path.exists(directory):\n",
+    "                        os.makedirs(directory)\n",
+    "                    out_notebook =  directory + \"/\" + descriptor + '.ipynb'\n",
+    "                    command = f'{preamble} papermill \"{in_notebook}\" \"{out_notebook}\" -k {kernel_name} -y \"{little_dict.__str__()}\"'\n",
     "                    f.write(f\"{command}\\n\")\n",
     "                    \n",
     "        else:\n",
