--- a/03c02 Flow Neighbor MSE.ipynb
+++ b/03c02 Flow Neighbor MSE.ipynb
@@ -11,16 +11,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# default_exp embed\n",
     "# hide\n",
@@ -35,9 +26,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "def flow_neighbor_loss(neighbors, embedded_points, embedded_flows):\n",
+    "    row, col = neighbors\n",
+    "    directions = (embedded_points[col] - embedded_points[row])\n",
+    "    flows = embedded_flows[row]\n",
+    "    loss = torch.norm(directions - flows)**2\n",
+    "    return loss"
+   ]
   },
   {
    "cell_type": "code",
@@ -46,22 +47,53 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "def flow_neighbor_loss(neighbors, embedded_points, embedded_flows):\n",
-    "  row, col = neighbors\n",
-    "  directions = (embedded_points[col] - embedded_points[row])\n",
-    "  flows = embedded_flows[row]\n",
-    "  loss = torch.norm(directions - flows)**2\n",
-    "  return loss"
+    "def contrastive_flow_loss(not_neighbors, embedded_points, embedded_flows):\n",
+    "    row, col = not_neighbors\n",
+    "    directions = (embedded_points[col] - embedded_points[row])\n",
+    "    flows = embedded_flows[row]\n",
+    "    dist_to_flow = torch.norm(directions - flows)**2\n",
+    "    loss = 1/dist_to_flow\n",
+    "    return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([8, 5, 5, 8, 7, 7, 9, 8, 5])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = torch.randint(5,10,(1,9))[0].long()\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = torch.zeros("
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('FRED')",
+   "display_name": "FREDkernel",
    "language": "python",
-   "name": "python3"
+   "name": "fredkernel"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
