new metric for knn classification

--- a/04 Trainer.ipynb
+++ b/04 Trainer.ipynb
@@ -73,7 +73,7 @@
     "import time\n",
     "import datetime\n",
     "import FRED\n",
-    "from tqdm.notebook import tqdm, trange\n",
+    "from tqdm import tqdm, trange\n",
     "import glob\n",
     "from PIL import Image\n",
     "import os\n",
@@ -135,10 +135,10 @@
     "                # backpropogate and update model\n",
     "                cost.backward()\n",
     "                self.optim.step()\n",
-    "                # add losses to running loss history\n",
-    "                self.losses = collate_loss(\n",
-    "                    provided_losses=losses, weights = self.loss_weights, prior_losses=self.losses, \n",
-    "                )\n",
+    "            # add losses to running loss history at the end of each epoch\n",
+    "            self.losses = collate_loss(\n",
+    "                provided_losses=losses, weights = self.loss_weights, prior_losses=self.losses, \n",
+    "            )\n",
     "            # run visualizations, if needed\n",
     "            if epoch_num % self.epochs_between_visualization == 0:\n",
     "                title = f\"{self.timestamp}/{self.title} Epoch {epoch_num:03d}\"\n",
@@ -148,6 +148,7 @@
     "        # Save most recent embedded points and flow artist for running visualizations\n",
     "        self.embedded_points = self.FE.embedder(self.dataloader.dataset.X.to(self.device))\n",
     "        self.flow_artist = flowArtist\n",
+    "        self.embedded_velocities = self.FE.flowArtist(self.embedded_points)\n",
     "        self.labels = self.dataloader.dataset.labels\n",
     "\n",
     "    def weight_losses(self, losses):\n",
