Results from second bone marrow benchmark
Signed-off-by: Professor Wug <dev@riddle.press>

--- a/05c01 Results on Bone Marrow.ipynb
+++ b/05c01 Results on Bone Marrow.ipynb
@@ -10,7 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device cpu\n"
+      "Using device cpu\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -21,7 +23,7 @@
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import FRED\n",
-    "if torch.__version__[:4] == '1.13': # If using pytorch with MPS, use Apple silicon GPU acceleration\n",
+    "if torch.__version__[:4] == '1.14': # If using pytorch with MPS, use Apple silicon GPU acceleration\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else 'mps' if torch.has_mps else \"cpu\")\n",
     "else:\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -73,6 +75,7 @@
     "    'flow_strength' : [1, 5, 10],\n",
     "    'smoothness_weight' : [0],\n",
     "    'flow_neighbor_loss_weight' : [1,10],\n",
+    "    'contrastive_flow_loss_weight':[1,5,10],\n",
     "    'diffdist_weight' : [1],\n",
     "    'num_neighbors' : [5, 10, 20]\n",
     "}"
@@ -142,12 +145,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created 18 test scenarios.\n"
+      "Created 54 test scenarios.\n"
      ]
     }
    ],
    "source": [
-    "parameters_list_from_dict(parameters_dict, 'bone_marrow_test.json')"
+    "parameters_list_from_dict(parameters_dict, 'bone_marrow_test_contrastive.json')"
    ]
   },
   {
