--- a/05c Single Cell Dataset Benchmarker.ipynb
+++ b/05c Single Cell Dataset Benchmarker.ipynb
@@ -9,9 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device cuda\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Using device cuda\n"
      ]
     }
    ],
@@ -77,10 +75,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "processing data with pcs\n",
       "Normalized count data: X, spliced, unspliced.\n",
       "Logarithmized X.\n",
       "computing neighbors\n",
-      "    finished (0:00:01) --> added \n",
+      "    finished (0:00:08) --> added \n",
       "    'distances' and 'connectivities', weighted adjacency matrices (adata.obsp)\n",
       "computing moments based on connectivities\n",
       "    finished (0:00:05) --> added \n",
@@ -97,7 +96,7 @@
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.032377004623413086,
+       "elapsed": 0.03654217720031738,
        "initial": 0,
        "n": 0,
        "ncols": null,
@@ -111,7 +110,7 @@
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c52032b366434a18a4d69616c144e0b0",
+       "model_id": "648144e16eb545fa84a629e4de3cbc56",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,6 +120,17 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    finished (0:01:03) --> added \n",
+      "    'velocity_graph', sparse matrix with cosine correlations (adata.uns)\n",
+      "computing velocity embedding\n",
+      "    finished (0:00:02) --> added\n",
+      "    'velocity_pca', embedded velocity vectors (adata.obsm)\n"
+     ]
     }
    ],
    "source": [
@@ -131,10 +141,46 @@
     "# choose correct dataset\n",
     "if dataset_name == \"bone marrow\":\n",
     "    adata = scv.datasets.bonemarrow()\n",
-    "    X, flow, labels, n_pcs = rnavelo_pcs(adata)\n",
-    "    \n",
+    "    print(\"processing data with pcs\")\n",
+    "    X, flow, labels, n_pcs = rnavelo_pcs(adata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5780, 30])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set sigma =  4.438757\n"
+     ]
+    }
+   ],
+   "source": [
     "# build dataset\n",
-    "ds = ManifoldWithVectorField(X, flow, labels, sigma=sigma, dmap_coords_to_use=3, nbhd_strategy=\"flow neighbors\", n_neighbors=cnum_neighbors, flow_strength = flow_strength)\n",
+    "ds = ManifoldWithVectorField(X, flow, labels, sigma=sigma, dmap_coords_to_use=3, nbhd_strategy=\"flow neighbors\", n_neighbors=num_neighbors, flow_strength = flow_strength)\n",
     "dataloader = DataLoader(ds, batch_size=None, shuffle=True)"
    ]
   },
@@ -190,10 +236,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dataloader' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [11]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#papermill_description=FittingFRED\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m FREDtrainer\u001b[38;5;241m.\u001b[39mfit(\u001b[43mdataloader\u001b[49m, n_epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dataloader' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#papermill_description=FittingFRED\n",
-    "FREDtrainer.fit(dataloader, n_epochs=100)"
+    "FREDtrainer.fit(dataloader, n_epochs=10)"
    ]
   },
   {
