Preparing for tests of UW and PHATE on all single cell datasets

--- a/05d02 PHATE Comparison on sc.ipynb
+++ b/05d02 PHATE Comparison on sc.ipynb
@@ -151,6 +151,10 @@
     "elif dataset_name == \"dentategyrus\":\n",
     "    adata = scv.datasets.dentategyrus()\n",
     "    print(\"processing data with pcs\")\n",
+    "    X, flow, labels, n_pcs = rnavelo_pcs(adata)\n",
+    "elif dataset_name == \"pancreas\":\n",
+    "    adata = scv.datasets.pancreas()\n",
+    "    print(\"processing data with pcs\")\n",
     "    X, flow, labels, n_pcs = rnavelo_pcs(adata)"
    ]
   },
