Functions for integrating across the manifold
Signed-off-by: Professor Wug <dev@riddle.press>

--- a/05d02a PHATE tests.ipynb
+++ b/05d02a PHATE tests.ipynb
@@ -10,7 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device cpu\n"
+      "Using device cpu\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -35,7 +37,7 @@
    "id": "487b27d9-0b33-4144-b6bd-50238ffc266d",
    "metadata": {},
    "source": [
-    "# Comprehensive Bone Marrow Results with FRED"
+    "# Comprehensive PHATE Comparisons on Single Cell Datasets"
    ]
   },
   {
@@ -67,15 +69,8 @@
    "outputs": [],
    "source": [
     "parameters_dict = {\n",
-    "    'notebook' : ['05c Single Cell Dataset Benchmarker.ipynb'], # the notebook we are inserting these parameters into\n",
-    "    'dataset_name' : ['bone marrow'],\n",
-    "    'sigma' : ['automatic'],\n",
-    "    'flow_strength' : [5, 10],\n",
-    "    'smoothness_weight' : [0],\n",
-    "    'flow_neighbor_loss_weight' : [1],\n",
-    "    'contrastive_flow_loss_weight':[5,10,20],\n",
-    "    'diffdist_weight' : [1],\n",
-    "    'num_neighbors' : [10, 20]\n",
+    "    'notebook' : ['05d02 PHATE Comparison on sc.ipynb'], # the notebook we are inserting these parameters into\n",
+    "    'dataset_name' : ['bone marrow', 'dentategyrus', 'pancreas']\n",
     "}"
    ]
   },
@@ -143,12 +138,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created 12 test scenarios.\n"
+      "Created 3 test scenarios.\n"
      ]
     }
    ],
    "source": [
-    "parameters_list_from_dict(parameters_dict, 'bone_marrow_test_contrastive_refined.json')"
+    "parameters_list_from_dict(parameters_dict, 'phate_single_cell_tests.json')"
    ]
   },
   {
