--- a/02b Diffusion Maps and Distances.ipynb
+++ b/02b Diffusion Maps and Distances.ipynb
@@ -1841,7 +1841,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('FRED')",
    "language": "python",
    "name": "python3"
   }
