--- a/05e01 sc inference via integration.ipynb
+++ b/05e01 sc inference via integration.ipynb
@@ -9,9 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device mps\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Using device mps\n"
      ]
     }
    ],
@@ -56,7 +54,10 @@
    "source": [
     "# parameters\n",
     "dataset = \"bone marrow\"\n",
-    "filename_base = \"\""
+    "filename_base = \"05c Single Cell Dataset Benchmarker - bone marrow - q4S7SRK8MxoOiJxHBGuF\"\n",
+    "# integration parameters\n",
+    "starting_index = 0\n",
+    "num_steps = 100"
    ]
   },
   {
@@ -66,7 +67,168 @@
    "outputs": [],
    "source": [
     "X = np.loadtxt(\"embeddings/\" + filename_base + \" - X.txt\")\n",
-    "V = np.loadtxt(\"embeddings/\" + filename_base + \" - V.txt\")"
+    "V = np.loadtxt(\"embeddings/\" + filename_base + \" - V.txt\")\n",
+    "X = torch.tensor(X)\n",
+    "V = torch.tensor(V)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "using step size  0.011642332464642944\n"
+     ]
+    }
+   ],
+   "source": [
+    "flowline = flow_integration(X, V, starting_index=starting_index, num_steps = num_steps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " tensor(1598),\n",
+       " tensor(3355),\n",
+       " tensor(2891),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046),\n",
+       " tensor(955),\n",
+       " tensor(3046)]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flowline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "plot_directed_2d() got an unexpected keyword argument 'equal_aspect_ratio'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/adjourner/Projects/FRED/05e01 sc inference via integration.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/adjourner/Projects/FRED/05e01%20sc%20inference%20via%20integration.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m plot_flow_line(X,V,flowline)\n",
+      "File \u001b[0;32m~/Projects/FRED/FRED/inference.py:110\u001b[0m, in \u001b[0;36mplot_flow_line\u001b[0;34m(X, V, flowline)\u001b[0m\n\u001b[1;32m    108\u001b[0m lbs \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros(\u001b[39mlen\u001b[39m(Xembedded))\n\u001b[1;32m    109\u001b[0m lbs[flowline] \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m \u001b[39m#+ np.arange(len(flowline))/len(flowline)\u001b[39;00m\n\u001b[0;32m--> 110\u001b[0m plot_directed_2d(Xembedded,Vembedded,lbs, equal_aspect_ratio\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m, cmap\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mplasma\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: plot_directed_2d() got an unexpected keyword argument 'equal_aspect_ratio'"
+     ]
+    }
+   ],
+   "source": [
+    "plot_flow_line(X,V,flowline)"
    ]
   },
   {
@@ -74,9 +236,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "flowline = flow_integration(X, V, starting_index)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
