--- a/05f Metrics for Benchmarking.ipynb
+++ b/05f Metrics for Benchmarking.ipynb
@@ -135,7 +135,7 @@
     "# export\n",
     "from FRED.inference import flow_integration\n",
     "from tqdm.notebook import trange, tqdm\n",
-    "def monotone_increasing_metric(embedded_points, embedded_velocities, time_labels, num_samples = 10):\n",
+    "def monotone_increasing_metric(embedded_points, embedded_velocities, time_labels, num_samples = 1000):\n",
     "    # sample random starting points\n",
     "    idxs = torch.randint(len(embedded_points), size=[num_samples])\n",
     "    neg_diffs = 0\n",
@@ -145,7 +145,7 @@
     "        # take difference between neighbors in the vector\n",
     "        times_at_flowline = time_labels[flowline]\n",
     "        neighb_diffs = times_at_flowline[1:] - times_at_flowline[:-1]\n",
-    "        print(\"neighb diffs: \",neighb_diffs)\n",
+    "        # print(\"neighb diffs: \",neighb_diffs)\n",
     "        # get sums of negative numbers\n",
     "        neg_diffs += (np.sum(neighb_diffs) - np.sum(np.abs(neighb_diffs)))/2\n",
     "    neg_diffs/num_samples\n",
