Added streamline visualization option
Enabled by default in the trainer visualize points function

Signed-off-by: Professor Wug <dev@riddle.press>

--- a/03d Grid Sampler.ipynb
+++ b/03d Grid Sampler.ipynb
@@ -63,7 +63,7 @@
     "from FRED.data_processing import (\n",
     "    affinity_matrix_from_pointset_to_pointset\n",
     ")\n",
-    "def compute_grid(X, grid_width=20):\n",
+    "def compute_grid(X, grid_width=20, return_unmeshed_x_and_y = False):\n",
     "    \"\"\"Returns a grid of points which bounds the points X.\n",
     "    The grid has 'grid_width' dots in both length and width.\n",
     "    Accepts X, tensor of shape n x 2\n",
@@ -82,6 +82,8 @@
     "    )\n",
     "    xy_t = torch.concat([x[:, :, None], y[:, :, None]], dim=2).float()\n",
     "    xy_t = xy_t.reshape(grid_width**2, 2).detach()\n",
+    "    if return_unmeshed_x_and_y:\n",
+    "        return xy_t, torch.linspace(minx, maxx, steps=grid_width), torch.linspace(miny, maxy, steps=grid_width)\n",
     "    return xy_t"
    ]
   },
@@ -91,6 +93,11 @@
    "source": [
     "A cornerstone of this method will be the powering of the diffusion matrix, which must intersperse jumping between points in the dataset and in the surrounding grid. Traditional matrix powering will do, provided we add the grid points to the dataset before powering, and then take them out afterwards."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -254,7 +261,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('pyg_from_source')",
+   "display_name": "Python 3.9.13 ('FRED')",
    "language": "python",
    "name": "python3"
   }
