--- a/04b Visualizations for Training.ipynb
+++ b/04b Visualizations for Training.ipynb
@@ -50,6 +50,7 @@
     "import torch\n",
     "from FRED.embed import compute_grid\n",
     "import plotly.figure_factory as ff\n",
+    "import numpy as np\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
@@ -64,23 +65,43 @@
     "    use_streamlines = False,\n",
     "    **kwargs,\n",
     "):\n",
-    "    # computes grid around points\n",
-    "    # TODO: This might create CUDA errors\n",
-    "    grid = compute_grid(embedded_points.to(device)).to(device)\n",
-    "    # controls the x and y axes of the plot\n",
-    "    # linspace(min on axis, max on axis, spacing on plot -- large number = more field arrows)\n",
-    "    uv = flow_artist(grid).detach().cpu()\n",
-    "    u = uv[:, 0].cpu()\n",
-    "    v = uv[:, 1].cpu()\n",
-    "    x = grid.detach().cpu()[:, 0]\n",
-    "    y = grid.detach().cpu()[:, 1]\n",
     "    if use_streamlines:\n",
-    "        fig = ff.create_streamline(x, y, u, v, arrow_scale=.1)\n",
-    "        if save:\n",
-    "            fig.write_image(f\"visualizations/{title}.jpg\")\n",
-    "        else:\n",
-    "            fig.show()\n",
+    "        embedded_points_np = embedded_points.detach().numpy()\n",
+    "        fig = plt.figure(dpi=200, figsize=(5,5))\n",
+    "        ax = fig.add_subplot()\n",
+    "        grid_width = 100\n",
+    "        minx = float(np.min(embedded_points_np[:, 0]) - 0.1)  # TODO: use torch.min, try without detach\n",
+    "        maxx = float(np.max(embedded_points_np[:, 0]) + 0.1)\n",
+    "        miny = float(np.min(embedded_points_np[:, 1]) - 0.1)\n",
+    "        maxy = float(np.max(embedded_points_np[:, 1]) + 0.1)\n",
+    "        x = np.linspace(minx, maxx, grid_width)\n",
+    "        y = np.linspace(miny, maxy, grid_width)\n",
+    "        # build grid points\n",
+    "        Xgrid, Ygrid = np.meshgrid(x, y)\n",
+    "        xy_t = torch.concat([torch.tensor(Xgrid[:,:,None]), torch.tensor(Ygrid[:, :, None])], dim=2).float()\n",
+    "        # xy_t = xy_t.reshape(grid_width**2, 2).detach()\n",
+    "        # pass grid through flow artist\n",
+    "        uv = flow_artist(xy_t).detach().cpu()\n",
+    "        u = uv[:,:, 0].cpu()\n",
+    "        v = uv[:,:, 1].cpu()\n",
+    "        sc = ax.scatter(\n",
+    "            embedded_points_np[:, 0],\n",
+    "            embedded_points_np[:, 1],\n",
+    "            c=labels, cmap='viridis'\n",
+    "        )\n",
+    "        ax.streamplot(x,y,u,v)\n",
+    "        plt.axis(\"off\")\n",
     "    else:\n",
+    "        # computes grid around points\n",
+    "        # TODO: This might create CUDA errors\n",
+    "        grid = compute_grid(embedded_points.to(device)).to(device)\n",
+    "        # controls the x and y axes of the plot\n",
+    "        # linspace(min on axis, max on axis, spacing on plot -- large number = more field arrows)\n",
+    "        uv = flow_artist(grid).detach().cpu()\n",
+    "        u = uv[:, 0].cpu()\n",
+    "        v = uv[:, 1].cpu()\n",
+    "        x = grid.detach().cpu()[:, 0]\n",
+    "        y = grid.detach().cpu()[:, 1]\n",
     "        # quiver\n",
     "        # \tplots a 2D field of arrows\n",
     "        # \tquiver([X, Y], U, V, [C], **kw);\n",
@@ -171,7 +192,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('FRED')",
    "language": "python",
    "name": "python3"
   }
