--- a/04 Trainer.ipynb
+++ b/04 Trainer.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device cuda\n"
+      "Using device mps\n"
      ]
     }
    ],
@@ -51,21 +51,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'bsr_array' from 'scipy.sparse' (/gpfs/gibbs/project/krishnaswamy_smita/kjm76/conda_envs/FREDkernel/lib/python3.9/site-packages/scipy/sparse/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 11>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPIL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Image\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mFRED\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01membed\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ManifoldFlowEmbedder\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mipywidgets\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mwidgets\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbase64\u001b[39;00m\n",
-      "File \u001b[0;32m/gpfs/gibbs/project/krishnaswamy_smita/kjm76/FRED/FRED/embed.py:11\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnn\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_processing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m affinity_matrix_from_pointset_to_pointset\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mManifoldFlowEmbedder\u001b[39;00m(torch\u001b[38;5;241m.\u001b[39mnn\u001b[38;5;241m.\u001b[39mModule):\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\n\u001b[1;32m     16\u001b[0m         \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m     17\u001b[0m         embedding_dimension\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     22\u001b[0m         smoothness_grid\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     23\u001b[0m     ):\n",
-      "File \u001b[0;32m/gpfs/gibbs/project/krishnaswamy_smita/kjm76/FRED/FRED/data_processing.py:126\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    123\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m A\n\u001b[1;32m    125\u001b[0m \u001b[38;5;66;03m# Cell\u001b[39;00m\n\u001b[0;32m--> 126\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msparse\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m bsr_array, csr_array\n\u001b[1;32m    127\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n\u001b[1;32m    128\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmake_sparse_safe\u001b[39m(A):\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'bsr_array' from 'scipy.sparse' (/gpfs/gibbs/project/krishnaswamy_smita/kjm76/conda_envs/FREDkernel/lib/python3.9/site-packages/scipy/sparse/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# export\n",
     "import torch.nn as nn\n",
@@ -187,12 +173,13 @@
     "        ).decode(\"ascii\")\n",
     "        display(widgets.HTML(f'<img src=\"data:image/gif;base64,{b64}\" />'))\n",
     "\n",
-    "    def visualize_embedding(self):\n",
+    "    def visualize_embedding(self, use_streamlines=True):\n",
     "        visualize_points(\n",
     "            embedded_points=self.embedded_points,\n",
     "            flow_artist=self.flow_artist,\n",
     "            labels=self.labels,\n",
     "            title=self.title,\n",
+    "            use_streamlines=use_streamlines,\n",
     "        )\n",
     "\n",
     "    def visualize_loss(self, loss_type=\"all\"):\n",
@@ -479,7 +466,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('pyg_from_source')",
+   "display_name": "Python 3.9.13 ('FRED')",
    "language": "python",
    "name": "python3"
   }
