--- a/05c Single Cell Dataset Benchmarker.ipynb
+++ b/05c Single Cell Dataset Benchmarker.ipynb
@@ -595,7 +595,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('FRED')",
    "language": "python",
    "name": "python3"
   }
