--- a/01a02a Polar 1-Manifold Toy Datasets.ipynb
+++ b/01a02a Polar 1-Manifold Toy Datasets.ipynb
@@ -408,7 +408,7 @@
    "source": [
     "## Delayed Spirals\n",
     "\n",
-    "We sample $\\theta$ uniformly between $2\\pi \\times$ `num_spirals` and $3\\pi \\times$ `num_spirals` and calculate $x = r\\theta\\cos(\\theta), y = r\\theta\\sin(\\theta)$. The vector at each data point is tangent to the spiral and its length is proportional to $\\theta$."
+    "We sample $\\theta$ uniformly between $\\pi \\times$ `num_spirals` and $3\\pi \\times$ `num_spirals` and calculate $x = r\\theta\\cos(\\theta), y = r\\theta\\sin(\\theta)$. The vector at each data point is tangent to the spiral and its length is proportional to $\\theta$."
    ]
   },
   {
@@ -515,7 +515,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('sumry-directed-graphs')",
+   "display_name": "Python 3.9.13 ('pyg_from_source')",
    "language": "python",
    "name": "python3"
   }
