--- a/05c Single Cell Dataset Benchmarker.ipynb
+++ b/05c Single Cell Dataset Benchmarker.ipynb
@@ -257,7 +257,7 @@
     }
    ],
    "source": [
-    "FREDtrainer.visualize_embedding(use_streamlines=False)"
+    "FREDtrainer.visualize_embedding(use_streamlines=True)"
    ]
   },
   {
