updated flow integration metrics to use diffusion based integration
Previously, it was treating the arrows as definite velocities rather than probabilities, resulting in frequently becoming stuck when the lines pointed off the edge of the dataset. Additionally, when stuck, it would oscillate between the two most recent points, creating the impression of going against the flow of time.

The new “flow metrics” of 05f use the more robust diffusion based integration by default. I’m rerunning our benchmarks with this modification.

Signed-off-by: Professor Wug <dev@riddle.press>

--- a/05c Single Cell Dataset Benchmarker.ipynb
+++ b/05c Single Cell Dataset Benchmarker.ipynb
@@ -9,9 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device cpu\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Using device cpu\n"
      ]
     }
    ],
@@ -450,6 +448,7 @@
     "    time_labels = latent_time,\n",
     "    spreadsheet_name=spread_name,\n",
     "    unid = unid,\n",
+    "    flow_strength = flow_strength\n",
     ")"
    ]
   },
