--- a/05f Metrics for Benchmarking.ipynb
+++ b/05f Metrics for Benchmarking.ipynb
@@ -133,14 +133,14 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "from FRED.inference import flow_integration\n",
+    "from FRED.inference import diffusion_flow_integration\n",
     "from tqdm.notebook import trange, tqdm\n",
-    "def monotone_increasing_metric(embedded_points, embedded_velocities, time_labels, num_samples = 1000):\n",
+    "def monotone_increasing_metric(embedded_points, embedded_velocities, time_labels, num_samples = 1000, flow_strength=5):\n",
     "    # sample random starting points\n",
     "    idxs = torch.randint(len(embedded_points), size=[num_samples])\n",
     "    neg_diffs = 0\n",
     "    for pointA in tqdm(idxs):\n",
-    "        flowline = flow_integration(torch.tensor(embedded_points), torch.tensor(embedded_velocities), starting_index = pointA, step_size = \"automatic\", num_steps = 20)\n",
+    "        flowline = diffusion_flow_integration(torch.tensor(embedded_points), torch.tensor(embedded_velocities), starting_index = pointA, num_steps = 20, flow_strength=flow_strength)\n",
     "        flowline = np.array(flowline)\n",
     "        # take difference between neighbors in the vector\n",
     "        times_at_flowline = time_labels[flowline]\n",
@@ -169,7 +169,7 @@
    "source": [
     "# export\n",
     "import csv\n",
-    "def comprehensive_flow_metrics(X, flows, labels, embedded_points, embedded_velocities, time_labels, spreadsheet_name, unid):\n",
+    "def comprehensive_flow_metrics(X, flows, labels, embedded_points, embedded_velocities, time_labels, spreadsheet_name, unid, flow_strength):\n",
     "    neighbor_score = flow_neighbor_metric(X, flows, embedded_points,embedded_velocities)\n",
     "    silhouette_score, silhouete_score_with_flow = silhouette_metric(embedded_points, embedded_velocities, labels)\n",
     "    knn_score = nn_classification_metric(embedded_points, embedded_velocities, labels)\n",
@@ -182,7 +182,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('FRED')",
    "language": "python",
    "name": "python3"
   }
